--- a/template/base.html
+++ b/template/base.html
@@ -16,17 +16,12 @@
     
     <script type="text/javascript" src="http://maps.stamen.com/js/tile.stamen.js?v1.3.0"></script>
     <script type='text/javascript' src='http://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/0.4.0/leaflet.markercluster.js'></script>
-    
+
+    <script src="https://static.fusioncharts.com/code/latest/fusioncharts.js"></script>
+    <script src="https://static.fusioncharts.com/code/latest/themes/fusioncharts.theme.candy.js"></script>
 </head>
 <body>
 <div class="ui inverted vertical masthead segment">
-    <div class="ui container">
-        <div class="ui large secondary inverted pointing menu">
-            <a href="{% url 'home' %}" class="active item">Home</a>
-            <a href="{% url 'map' %}" class="item">City reports</a>
-            <a href="{% url 'predictor' %}" class="item">Price predictor</a>
-        </div>
-    </div>
     <section id="content">{% block content %}{% endblock %}</section>
 </div>
 </body>
