--- a/vis/templates/vis.html
+++ b/vis/templates/vis.html
@@ -12,23 +12,28 @@
 <div>
     <div id="seasonal-chart"></div>
     <div id="distribution-chart"></div>
-    <div id="availability-chart"></div>
-    <div id="price-chart"></div>
+    <div id="price-range-chart"></div>
+    <div id="region-price-chart"></div>
 </div>
 <script>
     var dateList = `{{ date_list }}`;
     var medianList = `{{ median_list }}`;
     var avgList = `{{ avg_list }}`;
-    var availability = `{{ availability }}`;
     var hotel = `{{ hotel }}`;
     var private = `{{ private }}`;
     var entire = `{{ entire }}`;
     var share = `{{ shared }}`;
-    var category = "{{ category }}";
+    var priceCategory = "{{ price_category }}";
     var entireList = "{{ entire_list }}";
     var privateList = "{{ private_list }}";
     var hotelList = "{{ hotel_list }}";
     var shareList = "{{ share_list }}";
+    var regionCategory = "{{ region_category }}";
+    var entireRegionList = "{{ entire_region_list }}";
+    var privateRegionList= "{{ private_region_list }}";
+    var hotelRegionList = "{{ hotel_region_list }}";
+    var shareRegionList = "{{ share_region_list }}";
+    var regionPrice = "{{ region_price }}";
     var city = "{{ city }}";
 </script>
 <script type="text/javascript" src='{% static "js/vis.js" %}'></script>
