add beijing and pairs data

--- a/predictor/templates/predictor.html
+++ b/predictor/templates/predictor.html
@@ -94,28 +94,36 @@
                 <div class="field">
                     <label>Amenities</label>
                     <div class="ui checkbox">
-                        <input type="checkbox" name="amen1">
-                        <label>Amenities1</label>
+                        <input type="checkbox" name="wifi">
+                        <label>Wifi</label>
                     </div>
                     <div class="ui checkbox">
-                        <input type="checkbox" name="amen2">
-                        <label>Amenities2</label>
+                        <input type="checkbox" name="smart-lock">
+                        <label>Smart lock</label>
                     </div>
                     <div class="ui checkbox">
-                        <input type="checkbox" name="amem3">
-                        <label>Amenities3</label>
+                        <input type="checkbox" name="air-conditioning">
+                        <label>Air conditioning</label>
                     </div>
                     <div class="ui checkbox">
-                        <input type="checkbox" name="amem4">
-                        <label>Amenities4</label>
+                        <input type="checkbox" name="kitchen">
+                        <label>Kitchen</label>
                     </div>
                     <div class="ui checkbox">
-                        <input type="checkbox" name="amem5">
-                        <label>Amenities5</label>
+                        <input type="checkbox" name="washer-dryer">
+                        <label>Washer / Dryer</label>
                     </div>
                     <div class="ui checkbox">
-                        <input type="checkbox" name="amem6">
-                        <label>Amenities6</label>
+                        <input type="checkbox" name="pets">
+                        <label>Pets</label>
+                    </div>
+                    <div class="ui checkbox">
+                        <input type="checkbox" name="elevator">
+                        <label>Elevator</label>
+                    </div>
+                    <div class="ui checkbox">
+                        <input type="checkbox" name="parking">
+                        <label>Free parking</label>
                     </div>
                 </div>
                 <div class="ui center aligned container" id="predit-button">
