--- a/vis/templates/vis.html
+++ b/vis/templates/vis.html
@@ -29,6 +29,7 @@
     var hotelList = "{{ hotel_list }}";
     var shareList = "{{ share_list }}";
     var regionCategory = "{{ region_category }}";
+    var maxCount = "{{ max_count }}";
     var entireRegionList = "{{ entire_region_list }}";
     var privateRegionList= "{{ private_region_list }}";
     var hotelRegionList = "{{ hotel_region_list }}";
