--- a/predictor/templates/predictor.html
+++ b/predictor/templates/predictor.html
@@ -18,7 +18,7 @@
                     <label>Location</label>
                     <div class="two fields">
                         <div class="field">
-                            <select class="ui dropdown" name="city">
+                            <select class="ui dropdown" name="city" id="city" required>
                                 <option value="">City</option>
                                 <option value="nyc">NYC</option>
                                 <option value="london">London</option>
@@ -28,66 +28,80 @@
                             </select>
                         </div>
                         <div class="field">
-                            <div class="ui left icon input">
-                                <input type="text" name="zip-code" placeholder="Zip code" required/>
-                                <i class="location arrow icon"></i>
-                            </div>
+                            <select class="ui disabled dropdown" name="neighbourhood" id="neighbourhood" required>
+                                <option value="">Neighbourhood</option>
+                            </select>
                         </div>
                     </div>
                 </div>
                 <div class="three fields">
                     <div class="field">
                         <label>Property type</label>
-                        <select class="ui dropdown" name="property-type">
+                        <select class="ui disabled dropdown" name="property-type" id="property-type" required>
                             <option value="">Property</option>
-                            <option value="1">Male</option>
-                            <option value="0">Female</option>
                         </select>
                     </div>
                     <div class="field">
                         <label>Room type</label>
-                        <select class="ui dropdown" name="room-type">
+                        <select class="ui disabled dropdown" name="room-type" id="room-type" required>
                             <option value="">Room</option>
-                            <option value="1">Male</option>
-                            <option value="0">Female</option>
                         </select>
                     </div>
                     <div class="field">
                         <label>Bed type</label>
-                        <select class="ui dropdown" name="bed-type">
+                        <select class="ui dropdown" name="bed-type" required>
                             <option value="">Bed</option>
-                            <option value="1">Male</option>
-                            <option value="0">Female</option>
+                            <option value="Airbed">Airbed</option>
+                            <option value="Couch">Couch</option>
+                            <option value="Futon">Futon</option>
+                            <option value="Pull-out Sofa">Pull-out Sofa</option>
+                            <option value="Real Bed">Real Bed</option>
                         </select>
                     </div>
                 </div>
-                <div class="four fields">
+                <div class="three fields">
                     <div class="field">
                         <label>Minimum Nights</label>
                         <div class="ui left icon input">
-                            <input type="number" name="minimum-nights" placeholder="1" required/>
+                            <input type="number" name="minimum-nights" min="1" placeholder="1" required/>
                             <i class="moon icon"></i>
                         </div>
                     </div>
                     <div class="field">
                         <label>Bedrooms</label>
                         <div class="ui left icon input">
-                            <input type="number" name="bedroom-num" placeholder="1" required/>
+                            <input type="number" name="bedroom-num" min="1" max="50" placeholder="1" required/>
                             <i class="home icon"></i>
                         </div>
                     </div>
                     <div class="field">
                         <label>Beds</label>
                         <div class="ui left icon input">
-                            <input type="number" name="bed-num" placeholder="1" required/>
+                            <input type="number" name="bed-num" min="1" max="47" placeholder="1" required/>
                             <i class="bed icon"></i>
                         </div>
                     </div>
+                </div>
+                <div class="three fields">
                     <div class="field">
                         <label>Bathrooms</label>
                         <div class="ui left icon input">
-                            <input type="number" name="bathroom-num" placeholder="1" required/>
+                            <input type="number" name="bathroom-num" min="1" max="25" placeholder="1" required/>
                             <i class="bath icon"></i>
+                        </div>
+                    </div>
+                    <div class="field">
+                        <label>Accomendates</label>
+                        <div class="ui left icon input">
+                            <input type="number" name="accomendate-num" min="1" max="50" placeholder="1" required/>
+                            <i class="user icon"></i>
+                        </div>
+                    </div>
+                    <div class="field">
+                        <label>Rating</label>
+                        <div class="ui left icon input">
+                            <input type="number" name="rating" min="1" max="100" placeholder="100" required/>
+                            <i class="star icon"></i>
                         </div>
                     </div>
                 </div>
@@ -134,10 +148,12 @@
             </form>
         </div>
         <div class="eight wide column">
-            <div id="seasonal-results" class="prediction-chart"></div>
-            <div id="distribution-results" class="prediction-chart"></div>
+            <div id="seasonal-results"></div>
         </div>
     </div>
 </div>
+<script>
+    var res = `{{ res }}`;
+</script>
 <script type="text/javascript" src='{% static "js/predict.js" %}'></script>
 {% endblock %}
